--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
 
+    <!--vue-faui-user-fe2: using firebase CDN-->
+    <!-- refer https://nju33.com/notes/npm/articles/Publish%20%E3%81%97%E3%81%9F%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB%E3%82%92%E4%B8%80%E8%A6%A7%E3%81%A7%E3%81%8D%E3%82%8B%E3%82%B5%E3%82%A4%E3%83%88#cdn.jsdelivr.net -->
+    <!--<script src="https://cdn.jsdelivr.net/combine/npm/vue-faui-user-fe2/initializeCDN.js,npm/vue-faui-user-fe2/accountCDN.js,npm/vue-faui-user-fe2/loginCDN.js,npm/vue-faui-user-fe2/fbinitCDN.js"></script>-->
+
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({
            google_ad_client: "ca-pub-1717720203982550",
