first running version

--- a/public/index.html
+++ b/public/index.html
@@ -13,15 +13,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <!--
     <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-auth.js"></script>-->
     <!--
     <script type="module">
       import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.4.1/firebase-app.js'
       import { auth } from 'https://www.gstatic.com/firebasejs/9.4.1/firebase-auth.js'
     </script>-->
+    <!--
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.css" />
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.css" />-->
 
     <!--vuetify-->
     <!--<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
